# tfreader

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  advisor.py  cli.py  main.py  schemas.py  security_analyzer.py  terraform_parser.py
azure-terraform-export/: main.tf  provider.tf
exports/azure-terraform-export/: aztfexportResourceMapping.json  aztfexportSkippedResources.txt  provider.tf
frontend/: app.js  index.html  styles.css
